# Carparkdetection

./: README.md
Vehicle Detection/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Vehicle Detection/static/: index.html
free spot detection/: Readme.md  colors.py  coordinates_generator.py  detection.py  get_image.py  requirements.txt
free spot detection/data/: coordinates_1.yml
