[project]
name="free_park_spot_detect_api"
version="0.0.1"
authors=[
    { name="Chandan Raj", email="chandan.raj@nagarro.com" },
]
description="A detection API using YOLO Object detection model"
readme="README.md"
requires-python= ">=3.7.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/chandanraj19/Detection-API"

[build-system]
requires = ["opencv-python~=4.7.0.72", "numpy~=1.21.6", "Flask~=2.2.3", "ultralytics~=8.0.57", "setuptools~=67.4.0"]